@@ -1156,9 +1156,6 @@ class POSIXProcessTestCase(BaseTestCase):
 
         open_fds = set()
 
-        if support.verbose:
-            print(" -- maxfd =", subprocess.MAXFD)
-
         for x in range(5):
             fds = os.pipe()
             self.addCleanup(os.close, fds[0])
@@ -1173,10 +1170,6 @@ class POSIXProcessTestCase(BaseTestCase):
 
             remaining_fds = set(map(int, output.split(b',')))
             to_be_closed = open_fds - {fd}
-            # Temporary debug output for intermittent failures
-            if support.verbose:
-                print(" -- fds that should have been closed:", to_be_closed)
-                print(" -- fds that remained open:", remaining_fds)
 
             self.assertIn(fd, remaining_fds, "fd to be passed not passed")
             self.assertFalse(remaining_fds & to_be_closed,
